fix(review): address readiness, pagination, cookies, and rust ci gaps

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 PROJECT_NAME=media-api-architecture
 PUBLIC_APP_DOMAIN=app.localhost
 PUBLIC_API_DOMAIN=api.localhost
-COOKIE_DOMAIN=.localhost
+COOKIE_DOMAIN=
+COOKIE_SECURE=false
 
 # OIDC (managed provider)
 OIDC_ISSUER=https://your-issuer.example.com/oauth2/default
