--- a/services/auth-api/Dockerfile
+++ b/services/auth-api/Dockerfile
@@ -6,7 +6,7 @@ RUN cargo build --release -p auth-api
 
 FROM debian:bookworm-slim
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends ca-certificates \
+    && apt-get install -y --no-install-recommends ca-certificates curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/target/release/auth-api /usr/local/bin/auth-api
