--- a/services/main-api/Cargo.toml
+++ b/services/main-api/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 [dependencies]
 anyhow.workspace = true
 axum.workspace = true
+prost.workspace = true
 prost-types.workspace = true
 tokio.workspace = true
 tonic.workspace = true
