--- a/.github/workflows/ci-compose-smoke.yml
+++ b/.github/workflows/ci-compose-smoke.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Validate compose configuration
-        run: docker compose -f infra/compose/docker-compose.yml config
+        run: docker compose -f infra/compose/docker-compose.yml --env-file .env.example config
