--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ OIDC_AUDIENCE=media-api
 ENVOY_HTTP_PORT=8080
 ENVOY_ADMIN_PORT=9901
 MAIN_API_GRPC_PORT=50051
+MAIN_API_HEALTH_PORT=50052
 AUTH_API_PORT=8081
 OPA_PORT=8181
 
