--- a/infra/compose/docker-compose.yml
+++ b/infra/compose/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - backend
 
   opa:
-    image: openpolicyagent/opa:0.67.1
+    image: openpolicyagent/opa:0.67.1-debug
     container_name: media-opa
     command:
       - run
@@ -38,7 +38,7 @@ services:
     ports:
       - "${OPA_PORT:-8181}:8181"
     healthcheck:
-      test: ["CMD", "opa", "version"]
+      test: ["CMD", "wget", "-qO-", "http://localhost:8181/health"]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -77,6 +77,7 @@ services:
       - MINIO_ENDPOINT=${MINIO_ENDPOINT}
     ports:
       - "${MAIN_API_GRPC_PORT:-50051}:50051"
+      - "${MAIN_API_HEALTH_PORT:-50052}:50052"
     healthcheck:
       test: ["CMD", "curl", "--fail", "--silent", "http://localhost:50052/healthz"]
       interval: 10s
