--- a/services/auth-api/Cargo.toml
+++ b/services/auth-api/Cargo.toml
@@ -13,3 +13,8 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+http-body-util = "0.1"
+tokio.workspace = true
+tower = "0.5"
