build(docker): adopt cargo-chef caching for rust service images

--- a/services/main-api/Dockerfile
+++ b/services/main-api/Dockerfile
@@ -1,7 +1,25 @@
-FROM rust:1.84-bookworm AS builder
+FROM rust:1.84-bookworm AS chef
+WORKDIR /app
+RUN cargo install --locked cargo-chef
+
+FROM chef AS planner
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM chef AS cacher
+COPY --from=planner /app/recipe.json recipe.json
+# main-api build.rs compiles proto contracts during build, so proto changes
+# intentionally invalidate this dependency layer.
+COPY --from=planner /app/proto ./proto
+COPY --from=planner /app/services/main-api/build.rs ./services/main-api/build.rs
+RUN cargo chef cook --release --package main-api --recipe-path recipe.json
+
+FROM chef AS builder
 WORKDIR /app
 
 COPY . .
+COPY --from=cacher /app/target /app/target
+COPY --from=cacher /usr/local/cargo /usr/local/cargo
 RUN cargo build --release -p main-api
 
 FROM debian:bookworm-slim
