--- a/services/auth-api/Dockerfile
+++ b/services/auth-api/Dockerfile
@@ -1,7 +1,21 @@
-FROM rust:1.84-bookworm AS builder
+FROM rust:1.84-bookworm AS chef
+WORKDIR /app
+RUN cargo install --locked cargo-chef
+
+FROM chef AS planner
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM chef AS cacher
+COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --package auth-api --recipe-path recipe.json
+
+FROM chef AS builder
 WORKDIR /app
 
 COPY . .
+COPY --from=cacher /app/target /app/target
+COPY --from=cacher /usr/local/cargo /usr/local/cargo
 RUN cargo build --release -p auth-api
 
 FROM debian:bookworm-slim
