ci(test): include tests path in code change filter

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -23,6 +23,7 @@ jobs:
           filters: |
             code:
               - 'services/**'
+              - 'tests/**'
               - 'packages/**'
               - 'apps/**'
               - 'infra/**'
