security(docker): run service containers as non-root

--- a/services/auth-api/Dockerfile
+++ b/services/auth-api/Dockerfile
@@ -21,9 +21,12 @@ RUN cargo build --release -p auth-api
 FROM debian:bookworm-slim
 RUN apt-get update \
     && apt-get install -y --no-install-recommends ca-certificates curl \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && groupadd --system --gid 10001 appuser \
+    && useradd --system --uid 10001 --gid appuser --create-home --home-dir /home/appuser --shell /usr/sbin/nologin appuser
 
-COPY --from=builder /app/target/release/auth-api /usr/local/bin/auth-api
+COPY --from=builder --chown=appuser:appuser /app/target/release/auth-api /usr/local/bin/auth-api
 
 EXPOSE 8081
+USER appuser:appuser
 CMD ["auth-api"]
