--- a/apps/gateway-envoy/Dockerfile
+++ b/apps/gateway-envoy/Dockerfile
@@ -4,3 +4,5 @@ USER root
 RUN apt-get update \
     && apt-get install -y --no-install-recommends ca-certificates curl \
     && rm -rf /var/lib/apt/lists/*
+
+USER envoy
