--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,16 +15,33 @@ version = "0.1.0"
 anyhow = "1"
 async-trait = "0.1"
 axum = "0.7"
+base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
+dashmap = "6"
+hmac = "0.12"
+metrics = "0.24"
+metrics-exporter-prometheus = "0.16"
 prost = "0.13"
 prost-types = "0.13"
 protoc-bin-vendored = "3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sha2 = "0.10"
+subtle = "2"
 thiserror = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time"] }
 tonic = { version = "0.12", features = ["transport"] }
 tonic-build = "0.12"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 uuid = { version = "1", features = ["v4", "serde"] }
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
+opt-level = 3
+
+[profile.release.build-override]
+opt-level = 0
