--- a/services/auth-api/Cargo.toml
+++ b/services/auth-api/Cargo.toml
@@ -7,9 +7,19 @@ license.workspace = true
 [dependencies]
 anyhow.workspace = true
 axum.workspace = true
+base64.workspace = true
+hmac.workspace = true
+jsonwebtoken = "9"
+metrics.workspace = true
+metrics-exporter-prometheus.workspace = true
+openidconnect = "4"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
+subtle.workspace = true
 tokio.workspace = true
+tower = { version = "0.5", features = ["buffer", "limit", "load-shed"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
@@ -17,4 +27,4 @@ uuid.workspace = true
 [dev-dependencies]
 http-body-util = "0.1"
 tokio.workspace = true
-tower = "0.5"
+tower = { version = "0.5", features = ["util"] }
