--- a/services/main-api/Cargo.toml
+++ b/services/main-api/Cargo.toml
@@ -7,8 +7,16 @@ license.workspace = true
 [dependencies]
 anyhow.workspace = true
 axum.workspace = true
+base64.workspace = true
+dashmap.workspace = true
+hmac.workspace = true
+metrics.workspace = true
+metrics-exporter-prometheus.workspace = true
 prost.workspace = true
 prost-types.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+sha2.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 tracing.workspace = true
