--- a/tests/e2e-harness/Cargo.toml
+++ b/tests/e2e-harness/Cargo.toml
@@ -6,6 +6,9 @@ license.workspace = true
 
 [dependencies]
 anyhow.workspace = true
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+base64.workspace = true
+main-api = { path = "../../services/main-api" }
+reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
 serde_json.workspace = true
 tokio.workspace = true
+tonic.workspace = true
