--- a/infra/monitoring/prometheus.yml
+++ b/infra/monitoring/prometheus.yml
@@ -15,3 +15,13 @@ scrape_configs:
   - job_name: opa
     static_configs:
       - targets: ["opa:8181"]
+
+  - job_name: main-api
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["main-api:50052"]
+
+  - job_name: auth-api
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["auth-api:8081"]
