--- a/.github/workflows/ci-contract.yml
+++ b/.github/workflows/ci-contract.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Buf
         uses: bufbuild/buf-setup-action@v1
@@ -22,10 +24,13 @@ jobs:
       - name: Lint protobuf contracts
         run: buf lint
 
-      - name: Verify deterministic generation (tracked files)
+      - name: Check protobuf contract compatibility
+        run: buf breaking --against '.git#branch=main'
+
+      - name: Verify deterministic generation (tracked + untracked files)
         run: |
           bash scripts/gen-proto.sh
-          if [ -n "$(git status --porcelain --untracked-files=no)" ]; then
+          if [ -n "$(git status --porcelain)" ]; then
             echo "Generated files are out of date"
             git status --short
             exit 1
